--- a/go.html
+++ b/go.html
@@ -16,7 +16,7 @@
   <div class="box">
     <p id="msg">링크를 여는 중입니다.</p>
     <p class="small">팝업이 차단되면: 브라우저 설정에서 팝업 허용 후 다시 시도하세요.</p>
-    <p class="small">파라미터: <code>?n=뉴스URL&c=쿠팡URL&t=3000</code></p>
+    <p class="small">파라미터: <code>?n=https://news.kbs.co.kr/news/pc/view/view.do?ncd=8461785&c=https://link.coupang.com/a/dt9lnC&t=3000</code></p>
     <p class="small" id="debug"></p>
   </div>
 
