--- a/go.html
+++ b/go.html
@@ -20,40 +20,35 @@
     <p class="small" id="debug"></p>
   </div>
 
-  <script>
-    // URL 파라미터 읽기
-    const params = new URLSearchParams(location.search);
-    const newsUrl   = params.get("n");
-    const coupangUrl = params.get("c");
-    const delayMs   = parseInt(params.get("t") || "3000", 10);
+ <script>
+  const params = new URLSearchParams(location.search);
+  const newsUrl    = params.get("n");
+  const coupangUrl = params.get("c");
+  const delayMs    = parseInt(params.get("t") || "3000", 10);
 
-    const msgEl = document.getElementById("msg");
-    const dbgEl = document.getElementById("debug");
+  const msgEl = document.getElementById("msg");
+  const dbgEl = document.getElementById("debug");
 
-    function safeText(s){ return (s || "").replace(/</g,"&lt;").replace(/>/g,"&gt;"); }
+  function safeText(s){ return (s || "").replace(/</g,"&lt;").replace(/>/g,"&gt;"); }
 
-    if (!newsUrl || !coupangUrl) {
-      msgEl.textContent = "필수 파라미터가 없습니다. ?n=뉴스URL&c=쿠팡URL&t=3000 형태로 호출하세요.";
-      dbgEl.innerHTML = `news(n): ${safeText(newsUrl)}<br/>coupang(c): ${safeText(coupangUrl)}<br/>delay(t): ${delayMs}ms`;
-      throw new Error("missing params");
-    }
+  if (!newsUrl || !coupangUrl) {
+    msgEl.textContent = "필수 파라미터가 없습니다. ?n=뉴스URL&c=쿠팡URL&t=3000 형태로 호출하세요.";
+    dbgEl.innerHTML = `news(n): ${safeText(newsUrl)}<br/>coupang(c): ${safeText(coupangUrl)}<br/>delay(t): ${delayMs}ms`;
+    throw new Error("missing params");
+  }
 
-    // 1) 뉴스 새 탭 열기 (사용자 클릭으로 진입했을 때 성공 확률 높음)
-    const win = window.open(newsUrl, "_blank", "noopener,noreferrer");
+  // ✅ 팝업 없이: 먼저 뉴스로 이동 → delay 후 쿠팡으로 이동
+  msgEl.textContent = `뉴스로 이동합니다. ${Math.round((isNaN(delayMs)?3000:delayMs)/1000)}초 후 쿠팡으로 이동합니다…`;
+  dbgEl.innerHTML = `뉴스: <a href="${newsUrl}">${safeText(newsUrl)}</a><br/>쿠팡: <a href="${coupangUrl}">${safeText(coupangUrl)}</a><br/>지연: ${delayMs}ms`;
 
-    // 팝업 차단된 경우 안내
-    if (!win) {
-      msgEl.textContent = "팝업이 차단되어 뉴스가 새 탭으로 열리지 않았습니다. 팝업 허용 후 다시 시도하세요.";
-    } else {
-      msgEl.textContent = `뉴스를 새 탭으로 열었습니다. ${Math.round(delayMs/1000)}초 후 추천 페이지로 이동합니다…`;
-    }
+  // 1) 현재 탭을 뉴스로 이동
+  location.href = newsUrl;
 
-    // 2) 현재 탭은 delay 후 쿠팡으로 이동
-    setTimeout(() => {
-      location.href = coupangUrl;
-    }, isNaN(delayMs) ? 3000 : delayMs);
+  // 2) 뉴스 페이지에서 돌아올 방법이 없기 때문에,
+  //    쿠팡 자동 이동은 "뉴스를 새 탭으로 여는 구조"에서만 100% 가능했습니다.
+  //    그래서 팝업 없는 모드에서는 '뉴스→쿠팡' 순차 이동을 원하면
+  //    preview.html에서 처리(아래 2번)합니다.
+</script>
 
-    dbgEl.innerHTML = `뉴스: <a href="${newsUrl}">${safeText(newsUrl)}</a><br/>쿠팡: <a href="${coupangUrl}">${safeText(coupangUrl)}</a><br/>지연: ${delayMs}ms`;
-  </script>
 </body>
 </html>
